fixed to relative. add backface for flicker. take that stay puft.

--- a/css/theme/codingandcocktails.css
+++ b/css/theme/codingandcocktails.css
@@ -267,6 +267,15 @@ SNIPPETS
 }
 
 /*********************************************
+ * BROWSER SPECIFIC STYLES
+ *********************************************/
+
+/* prevents flicker in browser for animations */
+.safari * {
+  -webkit-backface-visibility: hidden;
+}
+
+/*********************************************
 * OVERRIDES
 **********************************************/
 .left-align{text-align:left}
