--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -343,4 +343,11 @@ body {
 		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 	}
 
+/*********************************************
+ * BROWSER SPECIFIC STYLES
+ *********************************************/
 
+/* prevents flicker in browser for animations */
+.safari * {
+  -webkit-backface-visibility: hidden;
+}
